Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ weather; by no means this is something scientific or serious, it is just a guide
 <p>In this tutorial I will use the package "sets" for creating the fuzzy system.
 For more information about "sets", check out the official
 documentation at <a href="https://cran.r-project.org/web/packages/sets/sets.pdf">https://cran.r-project.org/web/packages/sets/sets.pdf</a></p>
+
+<p>Link to the tutorial: <a href="http://juandes.github.io/FuzzyLogic-R/docs/fuzzy_tutorial">http://juandes.github.io/FuzzyLogic-R/docs/fuzzy_tutorial</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/juandes">juandes</a></p>
